--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-design-icons-iconfont": "^6.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-filters": "^0.12.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
