--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^6.1.0",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vue2-filters": "^0.12.0",
